# survexdatapy

./: LICENSE  README.md  pyproject.toml  setup.py  survexdata.py
.github/workflows/: ci.yml
tests/: test_survexdata.py
tests/data/: case.svx  dups-outer.svx  dups.svx  example.svx  flags.svx
